--- a/src/index.html
+++ b/src/index.html
@@ -1,15 +1,15 @@
 <!doctype html>
-<html lang="de">
+<html lang="de" data-theme="dark">
 <head>
   <meta charset="utf-8">
   <title>KartenkriegerWebseite</title>
   <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"> <!-- shrink-to-fit=no für besseres Scaling -->
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
-<body data-bs-theme="dark" class="mat-typography">
-  <app-root></app-root>
+<body class="mat-typography">
+<app-root></app-root>
 </body>
 </html>
